--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -9,38 +9,32 @@ autopkgr_actions:
 autopkgr_autopkg_install_version: "latest"
 autopkgr_munki_install_version: "latest"
 autopkgr_user: "{{ ansible_user_id }}"
-autopkgr_group: "{{ansible_user_gid }}"
-autopkgr_remote_base_path: "{{ ansible_user_dir }}/autopkgr-ansible"
-autopkgr_munki_repo: "{{ autopkgr_remote_base_path }}/munki/repo"
+autopkgr_group: "{{ ansible_user_gid }}"
+autopkgr_remote_base_path: "{{ ansible_user_dir }}/coreyramirezgomez.autopkgr"
+autopkgr_munki_repo: "file://{{ autopkgr_remote_base_path }}/munki/repo"
+autopkgr_munki_pkginfo_extension: ".plist"
+autopkgr_munki_default_catalog: "test"
 autopkgr_recipe_override_dir: "{{ autopkgr_remote_base_path }}/autopkgr/overrides"
 autopkgr_recipe_repos: []
 autopkgr_override_files: []
 autopkgr_update_trust_info: true
 autopkgr_fail_recipes_without_trust: false
 
-autopkgr_munki_configuration:
-  - name: "repo_url"
-    type: "string"
-    value: "file://{{ autopkgr_munki_repo }}"
-  - name: "editor"
-    type: "string"
-    value: ""
-  - name: "pkginfo_extension"
-    type: "string"
-    value: ".plist"
-  - name: "plugin"
-    type: "string"
-    value: ""
-  - name: "default_catalog"
-    type: "string"
-    value: "test"
+## Custom munki configuration
+autopkgr_munki_configuration: []
+  # - name: "editor"
+  #   type: "string"
+  #   value: ""
+  # - name: "plugin"
+  #   type: "string"
+  #   value: ""
 ## Custom autopkg configuration
-autopkgr_autopkg_configuration: {}
+autopkgr_autopkg_configuration: []
   # - name: "KEY"
   #   type: "string"
   #   value: "VALUE"
 ## Custom Post Processors
-autopkgr_post_processors: {}
+autopkgr_post_processors: []
   # - name: "Slack"
   #   repo: "https://github.com/coreyramirezgomez/autopkg-recipes.git"
   #   enabled: false
