--- a/vars/main.yml
+++ b/vars/main.yml
@@ -15,3 +15,13 @@ autopkgr_builtin_autopkg_configuration:
   - name: "RECIPE_OVERRIDE_DIRS"
     type: "string"
     value: "{{ autopkgr_recipe_override_dir }}"
+autopkgr_builtin_munki_configuration:
+  - name: "repo_url"
+    type: "string"
+    value: "{{ autopkgr_munki_repo }}"
+  - name: "pkginfo_extension"
+    type: "string"
+    value: "{{ autopkgr_munki_pkginfo_extension }}"
+  - name: "default_catalog"
+    type: "string"
+    value: "{{ autopkgr_munki_default_catalog }}"
