--- a/vars/main.yml
+++ b/vars/main.yml
@@ -11,14 +11,14 @@ autopkgr_builtin_autopkg_configuration:
     value: "{{ autopkgr_fail_recipes_without_trust | default('true', true) }}"
   - name: "MUNKI_REPO"
     type: "string"
-    value: "{{ autopkgr_munki_repo }}"
+    value: "{{ autopkgr_munki_repo_type }}{{ autopkgr_munki_repo_path }}"
   - name: "RECIPE_OVERRIDE_DIRS"
     type: "string"
     value: "{{ autopkgr_recipe_override_dir }}"
 autopkgr_builtin_munki_configuration:
   - name: "repo_url"
     type: "string"
-    value: "{{ autopkgr_munki_repo }}"
+    value: "{{ autopkgr_munki_repo_type }}{{ autopkgr_munki_repo_path }}"
   - name: "pkginfo_extension"
     type: "string"
     value: "{{ autopkgr_munki_pkginfo_extension }}"
